test: Cart 인수테스트 수정 (#169)